[project]
name = "axiongraph"
version = "0.0.5"
description = "Invisible events. Replayable graphs. An append-only execution-graph event model and deterministic reducer — provider-agnostic, storage is a port."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "axiongraph",
    "graph-events",
    "graph",
    "graph-state",
    "execution-graph",
    "dag",
    "directed-graph",
    "event-sourcing",
    "event-store",
    "event-log",
    "append-only",
    "reducer",
    "deterministic",
    "replay",
    "immutable",
    "snapshot",
    "provenance",
    "lineage",
    "audit",
    "observability",
    "tracing",
    "telemetry",
    "agents",
    "ai-agents",
    "agentic",
    "multi-agent",
    "orchestration",
    "workflow",
    "llm",
    "ai",
    "genai",
    "langgraph",
    "graph-store",
    "sqlite",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

# Optional backends are extras (the PyPI-extras model). Local stores need no extra —
# sqlite3 is in the standard library. Future backends land here, e.g. neo4j.
[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2", "psycopg-pool>=3.2"]
convex = ["convex>=0.6"]

[project.urls]
Homepage = "https://github.com/cachetronaut/axiongraph-py"
Repository = "https://github.com/cachetronaut/axiongraph-py"
Issues = "https://github.com/cachetronaut/axiongraph-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/axiongraph",
    "packages/core/src/axiongraph_core",
    "packages/store-local/src/axiongraph_store_local",
    "packages/store-postgres/src/axiongraph_store_postgres",
    "packages/store-convex/src/axiongraph_store_convex",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/src",
    "/packages/*/src",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a8",
    # The Postgres adapter's tests import psycopg; keep it in the dev env so they collect
    # and run (the env-gated suite still skips without AXIONGRAPH_TEST_POSTGRES_URL).
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    # The Convex adapter imports the convex client; keep it in the dev env so type checking
    # resolves it (the live smoke test still skips without CONVEX_URL — there is no offline
    # Convex harness on the Python side).
    "convex>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages"]
# The dev-only testkit is not installed (it never ships in the wheel); put it on the path
# so adapter tests can import the shared contract.
pythonpath = ["packages/testkit/src", "../../dockbay/dockbay-py/src"]

[tool.ty.environment]
extra-paths = [
    "src",
    "packages/core/src",
    "packages/store-local/src",
    "packages/store-postgres/src",
    "packages/store-convex/src",
    "packages/testkit/src",
    "../../dockbay/dockbay-py/src",
]
